--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "blueprint"
   ],
   "devDependencies": {
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-jshint": "^2.0.0",
