--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cyanotype",
+  "name": "Cyanotype",
   "version": "0.0.0",
   "description": "A blueprint-ish Ghost theme",
   "author": {
