--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,7 @@
 {
   "name": "cyanotype",
   "dependencies": {
-    "normalize-css": "normalize.css#~3.0.3",
-    "font-awesome": "fontawesome#~4.5.0"
+    "normalize-css": "^3.0.3"
   },
   "private": true
 }
