--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "cyanotype",
   "dependencies": {
-    "normalize-css": "^3.0.3"
+    "normalize-css": "^3.0.3",
+    "highlightjs": "^9.2.0"
   },
   "private": true
 }
